<resources>
    <string name="default_web_client_id">904374413569-jgi5q3vphslkqand2bkvq42aa19kkhj5.apps.googleusercontent.com</string>

    <string name="app_name">DAY STREAK</string>
    <string name="app_description">Ignite your success</string>
    <string name="intro_main_phrase">Ignite your success streak with Day Streak.</string>
    <string name="intro_description">Discover a new way to manage your goals and stay motivated with Day Streak. Track your progress, build habits, and unlock your full potential, one successful day at a time.</string>
    <string name="get_started">Get Started</string>

    <!-- Errors -->
    <string name="name_cannot_be_empty">Name can\'t be empty</string>
    <string name="category_name_already_exists">There is already a category with the same name</string>
    <string name="network_error">A network error occurred!</string>

    <!-- Home -->
    <string name="hi_username">Hi, %s!</string>
    <string name="no_streaks">No streaks found</string>

    <!--    streak details-->
    <string name="start_timer">Start timer</string>
    <string name="complete_day">Complete day</string>

    <!-- Common -->
    <string name="sign_in">Sign in</string>
    <string name="description_label"><b>Description</b></string>
    <string name="enter_your_credentials_to_sign_in">Enter your credentials to sign in</string>
    <string name="enter_your_credentials_to_create_account">Enter your information to create your account</string>
    <string name="are_you_sure_want_to_delete_category">Are you sure you want to delete this category?</string>
    <string name="are_you_sure_want_to_delete_streak">Are you sure you want to delete this streak?</string>
    <string name="by_deleting_category_streak_will_be_lost">By deleting this category, all streaks within it will also be deleted, and your daily streak progress will be lost.</string>
    <string name="by_deleting_streak_will_be_lost">By deleting this streak, all records and your daily streak progress will be lost.</string>
    <string name="type_the_category_name_to_confirm">Type %s to confirm</string>
    <string name="username_or_email">Username or email</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="username">Username</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="share">Share</string>
    <string name="continue_">Continue</string>
    <string name="back">Back</string>
    <string name="create">Create</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="pending">Pending</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="done">Done</string>
    <string name="over">Over</string>
    <string name="timer">Timer</string>
    <string name="notifications">Notifications</string>
    <string name="clear">Clear all</string>
    <string name="congrats">Congrats!</string>
    <string name="mark_all_as_read">Mark all as read</string>
    <string name="only_hide">Only hide</string>
    <string name="streak">Streak</string>
    <string name="category">Category</string>
    <string name="category_mandatory">Category*</string>
    <string name="in_min">In minutes</string>

    <string name="name">Name</string>
    <string name="name_mandatory">Name*</string>
    <string name="hour_mandatory">Hour*</string>
    <string name="time_spent_mandatory">Time spent*</string>
    <string name="hour">Hour</string>
    <string name="date">Date</string>
    <string name="today">Today</string>
    <string name="another_day">Another day</string>
    <string name="number_of">Number of...</string>
    <string name="number_of_days">Number of days</string>
    <string name="days">days</string>
    <string name="invited_people">Invited people:</string>
    <string name="streak_goal_duration_optional">Streak goal days duration (optional)</string>
    <string name="streak_goal_deadline">Goal deadline*</string>
    <string name="min_time_per_day_optional">Min. time per day</string>
    <string name="background_picture">Background picture</string>
    <string name="background_picture_mandatory">Background picture</string>
    <string name="description">Description</string>
    <string name="description_mandatory">Description*</string>
    <string name="drop_or_select_your_picture">Drop or Select your picture here</string>
    <string name="choose_bg_between_options">Choose between one of our available options</string>
    <string name="select_color">Select color</string>

    <string name="invite_other_to_same_streak">Invite others to do the same streak with you!</string>

    <string name="create_new_category">Create new category</string>
    <string name="what_you_want_to_create">What would you like to create?</string>

    <!-- Modals -->
    <string name="are_you_sure_want_delete">Are you sure you want to delete this streak?</string>
    <string name="confirm_delete_or_hide">Confirming deletion will result in the permanent loss of your progress and streak. Alternatively, you may choose to hide your streak instead.</string>
    <string name="no_notifications">No notifications</string>

    <!-- Settings -->
    <string name="badges">Badges</string>
    <string name="day_streaks">Day streaks</string>
    <string name="hidden_day_streaks">Hidden day streaks</string>
    <string name="settings">Settings</string>
    <string name="sign_out">Sign out</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Timer -->
    <string name="would_you_like_to_save_track">Would you like to save this time duration?</string>
    <string name="track_saving_added_to_daily_progress">By saving, it will be added to your daily streak progress.</string>

    <!-- Email sent -->
    <string name="email_sent">Email sent!</string>
    <string name="verify_email_to_finish_signup">Verify your email to finish signing up</string>
    <string name="email_already_verified">Email already verified?</string>

</resources>