<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:paddingBottom="0dp"
    android:background="@drawable/background_rounded_md_white">

    <TextView
        android:id="@+id/textViewTitle"
        style="@style/SemiboldText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/invite_other_to_same_streak"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/ic_close_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/labelEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitle" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:inputType="textPersonName|textCapWords"
            android:singleLine="true" />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/labelInvitedPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/invited_people"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/textInputEmail" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewPeople"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelInvitedPeople"
        tools:listitem="@layout/item_invited_person" />

    <LinearLayout
        android:id="@+id/linearLayoutButtons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/recyclerViewPeople">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonBack"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:background="@drawable/background_rounded_md_gray"
            android:text="@string/back"
            android:textColor="@color/black"
            android:textSize="16sp"
            app:backgroundTint="@null" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonCreate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:padding="0dp"
            android:background="@drawable/background_rounded_md_orange"
            android:text="@string/create"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:backgroundTint="@null" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>