<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/white"
tools:context=".presentation.login.LoginFragment">

<LinearLayout
    android:id="@+id/navbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        style="@style/SemiboldText"
        android:textColor="@color/black"
        android:textSize="26sp" />
</LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        app:layout_constraintBottom_toBottomOf="@id/linearLayoutSignUp"
        app:layout_constraintTop_toTopOf="@+id/navbar">

        <LinearLayout
            android:id="@+id/linearLayoutMainText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/mainPhrase"
                style="@style/SemiboldText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/sign_in"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:text="@string/enter_your_credentials_to_sign_in"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="14sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/labelMinUsernameOrEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/username_or_email"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutMainText" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputUsernameOrEmail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelMinUsernameOrEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextUsernameOrEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                android:textColor="@color/black"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/labelPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/password"
            android:textColor="@color/black"
            app:layout_constraintTop_toBottomOf="@id/textInputUsernameOrEmail" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/TextInputLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/labelPassword">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/TextInputEditText"
                android:textColor="@color/black"
                android:inputType="textPassword"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signInButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:layout_weight="1"
            android:background="@drawable/background_rounded_sm_orange"
            style="@style/AppMaterialButton"
            android:enabled="false"
            android:padding="0dp"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:backgroundTint="@null"
            app:layout_constraintTop_toBottomOf="@id/textInputPassword" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/linearLayoutSignUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingVertical="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            style="@style/SemiboldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dont_have_an_account"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/signUpButton"
            style="@style/SemiboldText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:layout_marginStart="10dp"
            android:textColor="@color/blue_font"
            android:textSize="14sp" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>