<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="20dp"
    android:layout_marginVertical="20dp"
    android:maxHeight="500dp"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp"
    android:background="@drawable/background_rounded_md_white">

    <TextView
        android:id="@+id/textViewNotifications"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginBottom="20dp"
        style="@style/SemiboldText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/buttonClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/transparent"
        android:src="@drawable/ic_close_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/split_line"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginVertical="10dp"
        android:background="@color/gray_line"
        app:layout_constraintTop_toBottomOf="@+id/textViewNotifications" />

    <TextView
        android:id="@+id/textViewNoItems"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/no_notifications"
        android:textColor="@color/gray_font"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/split_line" />

    <ScrollView
        android:id="@+id/scrollViewRecycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewNoItems">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewNotifications"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="3"
            tools:listitem="@layout/item_notification" />
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:gravity="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/scrollViewRecycler">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonMarkAllRead"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingHorizontal="10dp"
            android:paddingVertical="0dp"
            android:layout_marginRight="10dp"
            android:textSize="12sp"
            style="@style/MaterialButton"
            android:background="@drawable/background_button_rounded_sm_lightgray"
            app:backgroundTint="@null"
            android:text="@string/mark_all_as_read"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            android:layout_width="60dp"
            android:layout_height="30dp"
            style="@style/MaterialButton.Transparent"
            android:background="@drawable/background_button_transparent"
            android:padding="0dp"
            android:textSize="12sp"
            android:text="@string/clear"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>